--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
       POSTGRES_DB: finance_tracker_db
     ports:
       - "5432:5432"
-    #volumes:
-    #  - postgres_data:/var/lib/postgresql/data
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
 
@@ -25,8 +25,23 @@ services:
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "5050:80"
-    #volumes:
-    #  - pgadmin_data:/var/lib/pgadmin
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+  api:
+    build: .
+    container_name: finance-tracker
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      SERVER_PORT: "8080"
+      DATABASE_URL: "postgres://root:root@postgres:5432/finance_tracker_db?sslmode=disable"
+      JWT_SECRET_KEY: "gSfYvFPzkoDbbmWZujOAYRPgM3q6IN" # Non-prod JWT
     depends_on:
       - postgres
     networks:
@@ -36,6 +51,6 @@ networks:
   app-network:
     driver: bridge
 
-#volumes:
-#  postgres_data:
-#  pgadmin_data:
+volumes:
+  postgres_data:
+  pgadmin_data:
